--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -24,9 +24,11 @@
     <script src="src/routes.js"></script>
 	
 	<script src="src/menudata/categories.component.js"></script>
+	<script src="src/menudata/menudetails.component.js"></script>
     <script src="src/menudata/categories.controller.js"></script>
 	<script src="src/menudata/menuitems.controller.js"></script>
     <script src="src/menudata/menudata.service.js"></script>
+	
 
 
 
